--- a/RockPaperScicssor.html
+++ b/RockPaperScicssor.html
@@ -9,79 +9,69 @@
 
 <p>Rock Paper scissor</p>
 
-<button onclick=" 
-let RandomNumber = Math.random();
-let ComputerMove = ' ';
-if (RandomNumber > 0 && RandomNumber < 1/3)
-{ComputerMove = 'Rock'}
-else if ( RandomNumber > 1/3 && RandomNumber < 2/3)
-{ComputerMove = 'Paper'}
-else if (RandomNumber > 2/3 && RandomNumber < 1)
-{ComputerMove ='Scissor'}
-
-//console.log(ComputerMove);//
- let result = ' ';
+<button onclick=" playGame('Rock') " ;>Rock</button>
 
 
-if (ComputerMove === 'Rock')
-{result = 'Tie'}
-else if (ComputerMove === 'Paper')
-{result = 'You Loose'}
-else if (ComputerMove === 'Scissor'){
-result = 'You Win'}
-alert (`You Picked Rock , Computer Picked ${ComputerMove}, And the result is ${result}`)
-" ;>Rock</button>
+<button onclick=" playGame( 'Paper'); ">Paper</button>
 
 
-<button onclick="
-let RandomNumber = Math.random();
-let ComputerMove = ' ';
-if (RandomNumber > 0 && RandomNumber < 1/3)
-{ComputerMove = 'Rock'}
-else if ( RandomNumber > 1/3 && RandomNumber < 2/3)
-{ComputerMove = 'Paper'}
-else if (RandomNumber > 2/3 && RandomNumber < 1)
-{ComputerMove ='Scissor'}
-
-//console.log(ComputerMove);//
- let result = ' ';
-
-
-if (ComputerMove === 'Rock')
-{result = 'You Win'}
-else if (ComputerMove === 'Paper')
-{result = 'Tie'}
-else if (ComputerMove === 'Scissor'){
-result = 'You Lose'}
-alert (`You Picked Paper , Computer Picked ${ComputerMove}, And the result is ${result}`)
- ; ">Paper</button>
-
-
-<button onclick=" 
-let RandomNumber = Math.random();
-let ComputerMove = ' ';
-if (RandomNumber > 0 && RandomNumber < 1/3)
-{ComputerMove = 'Rock'}
-else if ( RandomNumber > 1/3 && RandomNumber < 2/3)
-{ComputerMove = 'Paper'}
-else if (RandomNumber > 2/3 && RandomNumber < 1)
-{ComputerMove ='Scissor'}
-
-//console.log(ComputerMove);//
- let result = ' ';
-
-
-if (ComputerMove === 'Rock')
-{result = 'You lose'}
-else if (ComputerMove === 'Paper')
-{result = 'You Win'}
-else if (ComputerMove === 'Scissor'){
-result = 'Tie'}
-alert (`You Picked Scissor , Computer Picked ${ComputerMove}, And the result is ${result}`)
- ; ">Scissor</button>
+<button onclick=" playGame( 'Scissor'); ">Scissor</button>
 
 <body>
-    <script></script>
+    <script>
+        function playGame(PlayerMove) {
+
+            let result = ' ';
+            let ComputerMove = funComputerMove();
+            if (PlayerMove === 'Scissor') {
+
+                if (ComputerMove === 'Rock') {
+                    result = 'You lose'
+                } else if (ComputerMove === 'Paper') {
+                    result = 'You Win'
+                } else if (ComputerMove === 'Scissor') {
+                    result = 'Tie'
+                }
+
+            } else if (PlayerMove === 'Paper') {
+
+                if (ComputerMove === 'Rock') {
+                    result = 'You Win'
+                } else if (ComputerMove === 'Paper') {
+                    result = 'Tie'
+                } else if (ComputerMove === 'Scissor') {
+                    result = 'You Lose'
+                }
+            } else if (ComputerMove === 'Rock') {
+
+                if (ComputerMove === 'Rock') {
+                    result = 'Tie'
+                } else if (ComputerMove === 'Paper') {
+                    result = 'You Loose'
+                } else if (ComputerMove === 'Scissor') {
+                    result = 'You Win'
+                }
+
+            }
+            alert(`You Picked ${PlayerMove} , Computer Picked ${ComputerMove}, And the result is ${result}`);
+
+        }
+
+
+        function funComputerMove() {
+
+            let RandomNumber = Math.random();
+            let ComputerMove = ' ';
+            if (RandomNumber > 0 && RandomNumber < 1 / 3) {
+                ComputerMove = 'Rock'
+            } else if (RandomNumber > 1 / 3 && RandomNumber < 2 / 3) {
+                ComputerMove = 'Paper'
+            } else if (RandomNumber > 2 / 3 && RandomNumber < 1) {
+                ComputerMove = 'Scissor'
+            }
+            return ComputerMove;
+        }
+    </script>
 </body>
 
 </html>
